- ADD: Added ontology db structure. - ADD: Added trial setup stats endpoint. -